...
            }
    }

    @Synchronized
    override fun save(serverKey: String, encodedSession: String?) {
        val preferenceKey = preferenceKey(serverKey)
        val editor = preferences.edit()
        if (encodedSession == null) {
            editor.remove(preferenceKey)
        } else {
            editor.putString(preferenceKey, encrypt(serverKey, encodedSession))
        }
        check(editor.commit()) { "Failed to persist the remote session" }
...
